# CompPhotoFinalProject

./: CMakeLists.txt
ext/nanogui/buildtmp/: example_icons
ext/nanogui/include/nanogui/: screen.h
ext/nanogui/src/: colorwheel.cpp  common.cpp  example1.cpp  screen.cpp
include/poly/: common.h  floatimage.h  gui.h  image.h  indexmap.h  subscreen.h  utils.h
src/: floatimage.cpp  gui.cpp  image.cpp  indexmap.cpp  main.cpp  subscreen.cpp
